[package]
name = "pointercrate-integrate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono" ] }
bincode = "1.3.1"
reqwest = "0.12.*"
futures = "0.3.8"
log = "0.4.22"
chrono = "0.4.38"
tokio = {version = "1.38.0", features = ["rt"]}
pointercrate-demonlist = { path = "../pointercrate-demonlist" }
pointercrate-core = { path = "../pointercrate-core" }
governor = "0.6.3"
nonzero_ext = "0.3.0"

[dependencies.dash-rs]
git = "https://github.com/qimiko/dash-rs"
rev = "21b8e86aa3ffe9ba4ba4bfd147b94abf2afa50ef"
